--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <label for="correo">E-Mail:</label>
         <input type="email" id="correo" name="correo" required><br><br>
 
-        <input type="submit" value="Enviar">
+        <input type="submit" value="Enviar" onclick="window.location.href='Backpage.html'">
     </form>
 </body>
 </html>
